# llmail

./: .env.example  .gitignore  .pypirc.example  CHANGELOG.md  Dockerfile  Dockerfile.generator  Dockerfile.responder  Dockerfile.test  INSTALL.md  MANIFEST.in  MAkefile  Makefile  PUBLISHING.md  README.md  TODO.md  docker-entrypoint.sh  docker_compose.yml  email_generator.py  email_organizer.py  email_organizer_bot.py  email_responder.py  email_responder_bot.py  imap_client.py  imap_utils.py  install  install.sh  llmail_cli.py  llmass_cli.py  publish.sh  pyproject.toml  requirements.txt  requirements_setup_files.py  run_docker_tests.sh  setup.py  test_install.sh  test_suite.py
dovecot/: Dockerfile  dovecot.conf  users
llmass/: logging_utils.py
llmass/core/: router.py
llmass/imap/: __init__.py  client.py  session.py
llmass/organizer/: actions.py  app.py  categorize.py  corruption.py  fetcher.py  filters.py  folders.py  repair.py  text_utils.py
